fixed some minor layout issues with the activity feed

--- a/public/stylesheets/profile/profile_activity.css
+++ b/public/stylesheets/profile/profile_activity.css
@@ -47,7 +47,7 @@
 }
 
 table {
-  background: #fff;
+  background: #fefefe;
 }
 
 table tr {
@@ -103,13 +103,19 @@ tr .prizm-avatar-sm {
 }
 
 .activity-header {
-  line-height: 40px;
-  margin-top: 50px;
-  margin-bottom: 20px;
+  height: 107px;
+  padding-top: 56px;
+  line-height: 24px;
+  padding-bottom: 0;
+  width: 100%;
+  margin: 0;
+  vertical-align: baseline;
   background-image: url('/images/profile/activity/activity_header.png');
   background-repeat: no-repeat;
+  font-size: 24px;
 
-  background-position-x: 15px;
+  color: #545358;
+  background-position: 15px 48px;
   padding-left: 68px;
 }
 
